<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solitario Celta</string>
    <string name="txtSinImplementar">¡No implementado aún!</string>
    <string name="txtReiniciarPartida">Reiniciar</string>
    <string name="txtOpcionGuardar">Guardar Partida</string>
    <string name="txtOpcionRecuperar">Recuperar Partida</string>
    <string name="txtOpcionMejoresResultados">Mejores Resultados</string>
    <string name="txtGuardadoExito">Guardado con éxito</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Desea jugar otra partida?</string>
    <string name="txtDialogoFinalAfirmativo">Sí</string>
    <string name="txtDialogoFinalNegativo">No</string>

    <!-- Diálogo Reiniciar -->
    <string name="txtDialogoReiniciarTitulo">Reiniciar</string>
    <string name="txtDialogoReiniciarPregunta">¿Desea reiniciar la partida?</string>
    <string name="txtDialogoReiniciarAfirmativo">Reiniciar</string>
    <string name="txtDialogoReiniciarNegativo">Volver</string>

    <!-- Diálogo Recuperar -->
    <string name="txtDialogoRecuperarTitulo">Recuperar</string>
    <string name="txtDialogoRecuperarPregunta">Perderá los progresos realizados de la partida actual. ¿Desea continuar?</string>
    <string name="txtDialogoRecuperarAfirmativo">Cargar partida</string>
    <string name="txtDialogoRecuperarNegativo">Volver</string>

    <!-- Diálogo Borrar -->
    <string name="txtDialogoBorrarTitulo">Borrar puntuaciones</string>
    <string name="txtDialogoBorrarPregunta">¿Está seguro que desea borrar todas las puntuaciones?</string>
    <string name="txtDialogoBorrarAfirmativo">¡Claro que lo estoy!</string>
    <string name="txtDialogoBorrarNegativo">Volver a salvo...</string>

    <!-- Acerca de -->
    <string name="aboutText">Acerca de</string>
    <string name="aboutMessage">El juego consiste en ir comiendo piezas
    (en horizontal o en vertical) hasta conseguir que sólo quede una pieza
    en el centro. En cada movimiento, la pieza movida solo puede saltar única una pieza.</string>

    <!-- Preferencias -->
    <string name="preferencesText">Ajustes</string>
    <string name="prefTituloCategoria1">Datos personales</string>
    <string name="prefTituloNombreJugador">Nombre del jugador</string>
    <string name="prefTextoNombreJugador">Pulse para teclear el nombre del jugador</string>
    <string name="prefTituloCategoria2">Ajustes del juego</string>
    
    <string name="nombreFicheroPersistencia">persistenciaSF.txt</string>

    <!--Mejores Puntuaciones -->
    <string name="txtMejoresPuntuacionesPosicion">Posicion</string>
    <string name="txtMejoresPuntuacionesNombreUsu">Nombre Usuario</string>
    <string name="txtMejoresPuntuacionesNFichas">Nº Fichas</string>
    <string name="txtMejoresPuntuacionesFecha">Fecha</string>




</resources>