<?xml version="1.0" encoding="utf-8"?>
<LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?attr/colorPrimary">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/txtOpcionMejoresResultados"
            android:textColor="@color/colorTitles"
            android:textSize="20dp" />
            <ImageButton
                android:id="@+id/borrarPuntuaciones"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:scaleType="fitXY"
                android:src="@drawable/borrar"
                android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tvCabeceraId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/txtMejoresPuntuacionesPosicion"/>

        <TextView
            android:id="@+id/tvCabeceraNombreUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/txtMejoresPuntuacionesNombreUsu"/>

        <TextView
            android:id="@+id/tvCabeceraFichas"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/txtMejoresPuntuacionesNFichas"/>

        <TextView
            android:id="@+id/tvCabeceraFecha"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/txtMejoresPuntuacionesFecha"/>
    </LinearLayout>

    <ListView
        android:id="@+id/lvListadoPuntuaciones"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</LinearLayout>